--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Homework04</title>
+  <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,38 +15,72 @@
           <form class="settings" action="#">
               <label for="lang">Language</label>
                 <select id="lang">
-                  <option>03</option>
-                  <option>02</option>
-                  <option>01</option>
+                  <option>English</option>
+                  <option>Ukranian</option>
+                  <option>Japanese</option>
                 </select>
-                <label for="cur">cur</label>
-                  <select id="cur">
-                    <option>03</option>
-                    <option>02</option>
-                    <option>01</option>
+                <label for="currency">Currency</label>
+                  <select id="currency">
+                    <option>USD</option>
+                    <option>UAH</option>
+                    <option>JPY</option>
                   </select>
           </form>
           <ul class="top-nav">
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
+            <li><a href="#">Account</a></li>
+            <li><a href="#">Wishlist</a></li>
+            <li><a href="#">Checkout</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Sign Up</a></li>
           </ul>
           </div>
         </div>
-<a href=""><img src="" alt=""></a>
-<nav class="main-nav">
-  <ul>
-    <li><a href="">Lorem.</a></li>
-    <li><a href="">Hic.</a></li>
-    <li><a href="">Alias.</a></li>
-    <li><a href="">Dolores?</a></li>
-    <li><a href="">Iure.</a></li>
-  </ul>
-</nav>
-
+        <div class="container">
+        <a href="" class="logo clearfix"><img src="images/logo.png" alt="LOGO"></a>
+        <nav class="main-nav">
+          <ul class="main-nav-menu">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">WOMEN</a></li>
+            <li><a href="#">MEN</a></li>
+            <li><a href="#">OTHER</a></li>
+            <li><a href="#">PURCHASE</a></li>
+          </ul>
+        </nav>
+        <form class="search" action="index.html" method="post">
+          <input type="search" name="" value="Search..">
+          <i class="fa fa-search" aria-hidden="true"></i>
+        </form>
+      </div>
       </header>
+<!-- slider -->
+    <div class="main-slide">
+      <div class="container">
+      <a href="#"><img src="#" alt=""></a>
+      <div class="left-btn"></div>
+      <div class="right-bth"></div>
+      </div>
+    </div>
+<!-- main -->
+    <main class="main-body">
+      <div class="container">
+      <div>
+      <h1>Featured Products</h2>
+      </div>
+      <div class="items">
+        <div class="item">
+         <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+         <a href="#" class="btn"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
+         <p>Lorem ipsum dolor.</p>
+         <div class="price-box">
+          <span class="old-price">150001$</span>
+          <span class="price">150000$</span>
+         </div>
+         <div class="ribbon"></div>
+         <div class="ribbon blue left"></div>
+        </div>
+       </div>
+    </div>
+    </main>
   </div>
 </body>
 </html>
