--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Homework04</title>
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/slick.css">
+  <!-- <link rel="stylesheet" type="text/css" href="css/slick-theme.css"> -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -53,20 +55,63 @@
       </div>
       </header>
 <!-- slider -->
-    <div class="main-slide">
-      <div class="container">
-      <a href="#"><img src="#" alt=""></a>
-      <div class="left-btn"></div>
-      <div class="right-bth"></div>
+    <div class="regular slider">
+      <div class="slide">
+        <img src="images/slide01.jpg" alt="">
+        <div class="text-block">
+          <strong class="title">
+            <span>ALUMINIUM CLUB1</span> <br> <span>Experience Ray-Ban</span>
+          </strong>
+        </div>
       </div>
+      <div class="slide">
+        <img src="images/slide01.jpg" alt="">
+        <div class="text-block">
+          <strong class="title">
+            <span>ALUMINIUM CLUB2</span> <br> <span>Experience Ray-Ban</span>
+          </strong>
+        </div>
+      </div>
+      <div class="slide">
+          <img src="images/slide01.jpg" alt="">
+          <div class="text-block">
+            <strong class="title">
+              <span>ALUMINIUM CLUB3</span> <br> <span>Experience Ray-Ban</span>
+            </strong>
+          </div>
+        </div>
+        <div class="slide">
+            <img src="images/slide01.jpg" alt="">
+            <div class="text-block">
+              <strong class="title">
+                <span>ALUMINIUM CLUB4</span> <br> <span>Experience Ray-Ban</span>
+              </strong>
+            </div>
+          </div>
+          <div class="slide">
+              <img src="images/slide01.jpg" alt="">
+              <div class="text-block">
+                <strong class="title">
+                  <span>ALUMINIUM CLUB5</span> <br> <span>Experience Ray-Ban</span>
+                </strong>
+              </div>
+            </div>
+            <div class="slide">
+                <img src="images/slide01.jpg" alt="">
+                <div class="text-block">
+                  <strong class="title">
+                    <span>ALUMINIUM CLUB6</span> <br> <span>Experience Ray-Ban</span>
+                  </strong>
+                </div>
+              </div>
     </div>
 <!-- main -->
     <main class="main-body">
       <div class="container">
       <div>
-      <h1>Featured Products</h2>
+      <h2>Featured Products</h2>
       </div>
-      <div class="items">
+      <!-- <div class="items">
         <div class="item">
          <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
          <a href="#" class="btn"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
@@ -78,9 +123,45 @@
          <div class="ribbon"></div>
          <div class="ribbon blue left"></div>
         </div>
-       </div>
-    </div>
+       </div> -->
+
+      <div class="regular02 side-slider clearfix">
+          <div class="side-slide">
+            <img src="images/side-slide01.jpg" alt="">
+          </div>
+          <div class="side-slide">
+            <img src="images/side-slide01.jpg" alt="">
+          </div>
+          <div class="side-slide">
+            <img src="images/side-slide01.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
     </main>
   </div>
+
+<!-- slick / scripts -->
+
+<script src="https://use.fontawesome.com/d7d3468d20.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+<script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript">
+  $(document).on('ready', function() {
+    $(".regular").slick({
+      dots: false,
+      infinite: true,
+      slidesToShow: 1,
+      slidesToScroll: 1
+    });
+    $(".regular02").slick({
+      dots: true,
+      infinite: true,
+      slidesToShow: 1,
+      slidesToScroll: 1,
+      arrows: false
+    });
+  });
+</script>
 </body>
 </html>
