--- a/index.html
+++ b/index.html
@@ -136,7 +136,75 @@
             <img src="images/side-slide01.jpg" alt="">
           </div>
         </div>
+
+        <!-- news block  -->
+        <!-- <div class="news clearfix">
+							<div class="banner">
+								<div class="banner-first">
+									<div class="top-border"></div>
+									<h2>FEATURED GLASS</h2>
+									<a href="#" class="btn">Check it Out</a>
+									<a href="#"><img src="images/news-glass-one.png" alt="featured"></a>
+									<a href="#" class="btn"></a>
+								</div>
+								<div class="radio-buttons-box">
+									<a href="#" class="radio-buttons"><i class="fa fa-circle" aria-hidden="true"></i></a>
+									<a href="#" class="radio-buttons"><i class="fa fa-circle" aria-hidden="true"></i></a>
+									<a href="#" class="radio-buttons"><i class="fa fa-circle" aria-hidden="true"></i></a>
+								</div>
+								<div class="banner-second">
+									<div class="top-border"></div>
+									<h2>NEWLETTER SIGNUP</h2>
+									<p>Lorem ipsum dolor sit amen, dolor imun ra adlip.</p>
+									<p>________</p>
+									<input type="email">
+									<a href="#" class="btn">Subscribe</a>
+								</div>
+							</div>
+						</div> -->
+
+
       </div>
+
+      <!-- footer  -->
+      <footer>
+				<div class="footer-body">
+					<div class="delivery-row">
+						<div class="container clearfix">
+							<div class="left-row">
+								<a href="#" class="btn"><i class="fa fa-truck" aria-hidden="true"></i></a>
+								<p>FREE SHIPPING ON ORDERS OVER $100</p>
+							</div>
+							<div class="right-row">
+								<a href="#" class="btn"><i class="fa fa-phone" aria-hidden="true"></i></a>
+								<p>CALL US! TOLL FREE-409-8888-0099</p>
+							</div>
+						</div>
+					</div>
+					<div class="contact-row">
+						<div class="container">
+							<div class="colum-one"></div>
+							<div class="colum-two"></div>
+							<div class="colum-three"></div>
+							<div class="colum-four"></div>
+						</div>
+					</div>
+					<div class="end-row">
+						<div class="container">
+							<div class="end-row-left">
+								<p>© Copyright 2013 Css Author, All Rights Reserved.</p>
+							</div>
+								<ul class="bottom-nav">
+									<li><a href="#">About Us</a><b>|</b></li>
+									<li><a href="#">Delivery & Returns</a><b>|</b></li>
+									<li><a href="#">Terms & conditions</a><b>|</b></li>
+									<li><a href="#">Contact Us</a></li>
+								</ul>
+						</div>
+					</div>
+				</div>
+			</footer>
+
 
     </main>
   </div>
