--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homework04</title>
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/slick.css">
-  <!-- <link rel="stylesheet" type="text/css" href="css/slick-theme.css"> -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -39,6 +39,7 @@
         </div>
         <div class="container">
         <a href="" class="logo clearfix"><img src="images/logo.png" alt="LOGO"></a>
+        <div class="mobile-nav">
         <nav class="main-nav">
           <ul class="main-nav-menu">
             <li><a href="#">HOME</a></li>
@@ -52,6 +53,8 @@
           <input type="search" name="" value="Search..">
           <i class="fa fa-search" aria-hidden="true"></i>
         </form>
+        </div>
+        <a href="#" class="btn-burger"><i class="fa fa-bars" aria-hidden="true"></i></a>
       </div>
       </header>
 <!-- slider -->
@@ -107,106 +110,100 @@
     </div>
 <!-- main -->
     <main class="main-body">
-      <div class="container">
-      <div>
-      <h2>Featured Products</h2>
-      </div>
-      <!-- <div class="items">
-        <div class="item">
-         <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
-         <a href="#" class="btn"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
-         <p>Lorem ipsum dolor.</p>
-         <div class="price-box">
-          <span class="old-price">150001$</span>
-          <span class="price">150000$</span>
-         </div>
-         <div class="ribbon"></div>
-         <div class="ribbon blue left"></div>
+      <div class="container clearfix">
+        <div class="content">
+        <ul class="prod-list">
+          <h2>Featured Products</h2>
+           <li class="">
+            <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+            <div class="desc">
+             <div class="text">
+              <p>lorem</p>
+              <span class="price-box"><span></span></span>
+             </div>
+             <a href="#" class="btn-cart"><img src="images/btn-cart.png" alt=""></a>
+            </div>
+           </li>
+           <li class="">
+            <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+            <div class="desc">
+             <div class="text">
+              <p>lorem</p>
+              <span class="price-box"><span></span></span>
+             </div>
+             <a href="#" class="btn-cart"><img src="images/btn-cart.png" alt=""></a>
+            </div>
+           </li>
+           <li>
+            <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+            <div class="desc">
+             <div class="text">
+              <p>lorem</p>
+              <span class="price-box"><span></span></span>
+             </div>
+             <a href="#" class="btn-cart"><img src="images/btn-cart.png" alt=""></a>
+            </div>
+           </li>
+          </ul>
         </div>
-       </div> -->
 
-      <div class="regular02 side-slider clearfix">
-          <div class="side-slide">
-            <img src="images/side-slide01.jpg" alt="">
+
+        <div class="side-bar">
+          <div class="regular02 side-slider clearfix">
+            <div class="side-slide">
+              <img src="images/side-slide01.jpg" alt="">
+            </div>
+            <div class="side-slide">
+              <img src="images/side-slide01.jpg" alt="">
+            </div>
+            <div class="side-slide">
+              <img src="images/side-slide01.jpg" alt="">
+            </div>
           </div>
-          <div class="side-slide">
-            <img src="images/side-slide01.jpg" alt="">
-          </div>
-          <div class="side-slide">
-            <img src="images/side-slide01.jpg" alt="">
+          <div class="newslatter-block">
+
           </div>
         </div>
-
-        <!-- news block  -->
-        <!-- <div class="news clearfix">
-							<div class="banner">
-								<div class="banner-first">
-									<div class="top-border"></div>
-									<h2>FEATURED GLASS</h2>
-									<a href="#" class="btn">Check it Out</a>
-									<a href="#"><img src="images/news-glass-one.png" alt="featured"></a>
-									<a href="#" class="btn"></a>
-								</div>
-								<div class="radio-buttons-box">
-									<a href="#" class="radio-buttons"><i class="fa fa-circle" aria-hidden="true"></i></a>
-									<a href="#" class="radio-buttons"><i class="fa fa-circle" aria-hidden="true"></i></a>
-									<a href="#" class="radio-buttons"><i class="fa fa-circle" aria-hidden="true"></i></a>
-								</div>
-								<div class="banner-second">
-									<div class="top-border"></div>
-									<h2>NEWLETTER SIGNUP</h2>
-									<p>Lorem ipsum dolor sit amen, dolor imun ra adlip.</p>
-									<p>________</p>
-									<input type="email">
-									<a href="#" class="btn">Subscribe</a>
-								</div>
-							</div>
-						</div> -->
-
-
       </div>
-
-      <!-- footer  -->
-      <footer>
-				<div class="footer-body">
-					<div class="delivery-row">
-						<div class="container clearfix">
-							<div class="left-row">
-								<a href="#" class="btn"><i class="fa fa-truck" aria-hidden="true"></i></a>
-								<p>FREE SHIPPING ON ORDERS OVER $100</p>
-							</div>
-							<div class="right-row">
-								<a href="#" class="btn"><i class="fa fa-phone" aria-hidden="true"></i></a>
-								<p>CALL US! TOLL FREE-409-8888-0099</p>
-							</div>
-						</div>
-					</div>
-					<div class="contact-row">
-						<div class="container">
-							<div class="colum-one"></div>
-							<div class="colum-two"></div>
-							<div class="colum-three"></div>
-							<div class="colum-four"></div>
-						</div>
-					</div>
-					<div class="end-row">
-						<div class="container">
-							<div class="end-row-left">
-								<p>© Copyright 2013 Css Author, All Rights Reserved.</p>
-							</div>
-								<ul class="bottom-nav">
-									<li><a href="#">About Us</a><b>|</b></li>
-									<li><a href="#">Delivery & Returns</a><b>|</b></li>
-									<li><a href="#">Terms & conditions</a><b>|</b></li>
-									<li><a href="#">Contact Us</a></li>
-								</ul>
-						</div>
-					</div>
-				</div>
-			</footer>
-
-
     </main>
+    <!-- footer  -->
+    <footer>
+      <div class="footer-body">
+        <div class="delivery-row">
+          <div class="container clearfix">
+            <div class="left-row">
+              <a href="#" class="btn"><i class="fa fa-truck" aria-hidden="true"></i></a>
+              <p>FREE SHIPPING ON ORDERS OVER $100</p>
+            </div>
+            <div class="right-row">
+              <a href="#" class="btn"><i class="fa fa-phone" aria-hidden="true"></i></a>
+              <p>CALL US! TOLL FREE-409-8888-0099</p>
+            </div>
+          </div>
+        </div>
+        <div class="contact-row">
+          <div class="container">
+            <div class="colum-one"></div>
+            <div class="colum-two"></div>
+            <div class="colum-three"></div>
+            <div class="colum-four"></div>
+          </div>
+        </div>
+        <div class="end-row">
+          <div class="container">
+            <div class="end-row-left">
+              <p>© Copyright 2013 Css Author, All Rights Reserved.</p>
+            </div>
+              <ul class="bottom-nav">
+                <li><a href="#">About Us</a><b>|</b></li>
+                <li><a href="#">Delivery & Returns</a><b>|</b></li>
+                <li><a href="#">Terms & conditions</a><b>|</b></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
 
 <!-- slick / scripts -->
@@ -229,6 +226,11 @@
       slidesToScroll: 1,
       arrows: false
     });
+
+    $('.btn-burger').click(function () {
+        $(this).parent().toggleClass('open');
+    });
+
   });
 </script>
 </body>
