--- a/index.html
+++ b/index.html
@@ -110,11 +110,21 @@
     </div>
 <!-- main -->
     <main class="main-body">
-      <div class="container clearfix">
+      <div class="container">
         <div class="content">
+        <h2>Featured Products</h2>
         <ul class="prod-list">
-          <h2>Featured Products</h2>
-           <li class="">
+          <li>
+            <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+            <div class="desc">
+             <div class="text">
+              <p>lorem</p>
+              <span class="price-box"><span>lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem </span></span>
+             </div>
+             <a href="#" class="btn-cart"><img src="images/btn-cart.png" alt=""></a>
+            </div>
+           </li>
+           <li>
             <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
             <div class="desc">
              <div class="text">
@@ -124,7 +134,7 @@
              <a href="#" class="btn-cart"><img src="images/btn-cart.png" alt=""></a>
             </div>
            </li>
-           <li class="">
+           <li>
             <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
             <div class="desc">
              <div class="text">
