--- a/index.html
+++ b/index.html
@@ -49,10 +49,20 @@
             <li><a href="#">PURCHASE</a></li>
           </ul>
         </nav>
-        <form class="search" action="index.html" method="post">
+
+        <div class="menu-right">
+						<form class="search">
+						  <input type="search" name="q" placeholder="Search..." />
+						  <a href="#" id=""><i class="fa fa-search" aria-hidden="true"></i></a>
+						</form>
+						 <a href="#" class="btn"><i class="fa fa-tag" aria-hidden="true"></i></a>
+						 <a href="#" class="btn"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span><a href="#" class="menu-right"><b>CART (0)</b></a></span>
+				</div>
+
+        <!-- <form class="search" action="index.html" method="post">
           <input type="search" name="" value="Search..">
           <i class="fa fa-search" aria-hidden="true"></i>
-        </form>
+        </form> -->
         </div>
         <a href="#" class="btn-burger"><i class="fa fa-bars" aria-hidden="true"></i></a>
       </div>
@@ -112,52 +122,54 @@
     <main class="main-body">
       <div class="container">
         <div class="content">
-        <h2>Featured Products</h2>
+        <h2>FEATURED PRODUCTS</h2>
         <ul class="prod-list">
           <li>
+            <div class="ribbon"><span>NEW</span></div>
             <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
             <div class="desc">
              <div class="text">
-              <p>lorem</p>
-              <span class="price-box"><span>lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem </span></span>
+              <p>Lorem Ipsum is simply.</p>
+              <span class="price-box"><span>$388.00</span></span>
              </div>
-             <a href="#" class="btn-cart"><img src="images/btn-cart.png" alt=""></a>
+             <a href="#" class="btn-cart">Cart button</a>
             </div>
            </li>
            <li>
-            <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
-            <div class="desc">
-             <div class="text">
-              <p>lorem</p>
-              <span class="price-box"><span></span></span>
+             <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+             <div class="desc">
+              <div class="text">
+               <p>Lorem Ipsum is simply.</p>
+               <span class="price-box"><span>$388.00</span></span>
+              </div>
+              <a href="#" class="btn-cart">Cart button</a>
              </div>
-             <a href="#" class="btn-cart"><img src="images/btn-cart.png" alt=""></a>
-            </div>
-           </li>
-           <li>
-            <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
-            <div class="desc">
-             <div class="text">
-              <p>lorem</p>
-              <span class="price-box"><span></span></span>
-             </div>
-             <a href="#" class="btn-cart"><img src="images/btn-cart.png" alt=""></a>
-            </div>
-           </li>
-           <li>
-            <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
-            <div class="desc">
-             <div class="text">
-              <p>lorem</p>
-              <span class="price-box"><span></span></span>
-             </div>
-             <a href="#" class="btn-cart"><img src="images/btn-cart.png" alt=""></a>
-            </div>
-           </li>
+            </li>
+            <li>
+              <div class="ribbon left green"><span>SALE</span></div>
+              <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+              <div class="desc">
+               <div class="text">
+                <p>Lorem Ipsum is simply.</p>
+                <span class="price-box"><span>$388.00</span></span>
+               </div>
+               <a href="#" class="btn-cart">Cart button</a>
+              </div>
+             </li>
+             <li>
+               <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+               <div class="desc">
+                <div class="text">
+                 <p>Lorem Ipsum is simply.</p>
+                 <span class="price-box"><span>$388.00</span></span>
+                </div>
+                <a href="#" class="btn-cart">Cart button</a>
+               </div>
+              </li>
           </ul>
         </div>
-
-
+<!-- side-bar -->
+<!-- slider-box  -->
         <div class="side-bar">
           <div class="regular02 side-slider clearfix">
             <div class="side-slide">
@@ -170,50 +182,106 @@
               <img src="images/side-slide01.jpg" alt="">
             </div>
           </div>
+<!-- newslatter-block -->
           <div class="newslatter-block">
-
-          </div>
+            <h2>NEWLETTER SIGNUP</h2>
+							<p>Lorem ipsum dolor sit amen, dolor imun ra adlip.</p>
+								<form action="#">
+									<input type="email">
+									<input type="submit" value="Subscribe">
+								</form>
+					</div>
         </div>
       </div>
     </main>
-    <!-- footer  -->
+<!-- footer  -->
     <footer>
-      <div class="footer-body">
-        <div class="delivery-row">
-          <div class="container clearfix">
-            <div class="left-row">
-              <a href="#" class="btn"><i class="fa fa-truck" aria-hidden="true"></i></a>
-              <p>FREE SHIPPING ON ORDERS OVER $100</p>
-            </div>
-            <div class="right-row">
-              <a href="#" class="btn"><i class="fa fa-phone" aria-hidden="true"></i></a>
-              <p>CALL US! TOLL FREE-409-8888-0099</p>
-            </div>
-          </div>
-        </div>
+    	<div class="footer-body">
+<!-- delivery-row -->
+    		<div class="delivery-row">
+    			<div class="container">
+    				<div class="footer-block">
+    					<a href="#" class="btn"><i class="fa fa-truck" aria-hidden="true"></i></a>
+    						<p>FREE SHIPPING ON ORDERS OVER $100</p>
+    				</div>
+    				<div class="footer-block">
+    						<a href="#" class="btn"><i class="fa fa-phone" aria-hidden="true"></i></a>
+    						<p>CALL US! TOLL FREE-409-8888-0099</p>
+    				</div>
+    			</div>
+    		</div>
+<!-- contact-row -->
         <div class="contact-row">
-          <div class="container">
-            <div class="colum-one"></div>
-            <div class="colum-two"></div>
-            <div class="colum-three"></div>
-            <div class="colum-four"></div>
-          </div>
-        </div>
-        <div class="end-row">
-          <div class="container">
-            <div class="end-row-left">
-              <p>© Copyright 2013 Css Author, All Rights Reserved.</p>
+    			<div class="container">
+<!-- facebook sample -->
+            <div class="contact-tab">
+    					<div class="text-block">Facebook</div>
+    					<div class="alt-content">
+    						<a href="#"><img src="images/social-fb-smpl.png" alt=""></a>
+    					</div>
+    				</div>
+<!-- twetter sample -->
+            <div class="contact-tab">
+    					<div class="text-block">From twitter</div>
+    					<div class="alt-content">
+    						<a href="#"><img src="images/social-tw-smpl.png" alt=""></a>
+    					</div>
+    				</div>
+<!-- additional info tab  -->
+            <div class="contact-tab">
+    				  <div class="text-block">Information</div>
+    					<div class="alt-content">
+
+                      <!--перестилить линки  -->
+                			<!-- <ul>
+    										<li>Sed ultrices purus non.</li>
+    										<li>sodales sodales.</li>
+    										<li>Curabitur pretium dui vitae.</li>
+    										<li>Donec gravida mi in nisl</li>
+    										<li>faucibus leo condimentum.</li>
+    										<li>Donec et lorem suscipit.</li>
+    									</ul> -->
+    					</div>
+    				</div>
+<!-- contacts / address tab -->
+            <div class="contact-tab">
+            <div class="text-block">Contact us</div>
+
+            <!-- перестиить полностью  -->
+
+            <!-- <div class="alt-content">
+    					  <span>Leo Store</span><br>
+    					  <span>Leopards media</span><br>
+    					  <span>KVM Rpad, 4590GH</span><br>
+    					  <span>+1 489-8888-0099</span><br>
+    					  <span>mail@email.com</span>
+              </div>
+
+                  <ul>
+                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+      						  <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+      						  <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
+      						  <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                  </ul> -->
             </div>
-              <ul class="bottom-nav">
-                <li><a href="#">About Us</a><b>|</b></li>
-                <li><a href="#">Delivery & Returns</a><b>|</b></li>
-                <li><a href="#">Terms & conditions</a><b>|</b></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
+    			</div>
+    		</div>
+
+        <div class="end-row">
+    			<div class="container">
+    				<div class="end-row-left">
+    					<p> &copy; Copyright 2013 Css Author, All Rights Reserved.</p>
+    				</div>
+            <ul class="bottom-nav">
+    					<li><a href="#">About Us</a><b>|</b></li>
+    					<li><a href="#">Delivery & Returns</a><b>|</b></li>
+    					<li><a href="#">Terms & conditions</a><b>|</b></li>
+    					<li><a href="#">Contact Us</a></li>
+    				</ul>
+    			</div>
+    		</div>
+    	</div>
+  </footer>
   </div>
 
 <!-- slick / scripts -->
