--- a/index.html
+++ b/index.html
@@ -37,35 +37,36 @@
           </ul>
           </div>
         </div>
-        <div class="container">
-        <a href="" class="logo clearfix"><img src="images/logo.png" alt="LOGO"></a>
-        <div class="mobile-nav">
-        <nav class="main-nav">
-          <ul class="main-nav-menu">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">WOMEN</a></li>
-            <li><a href="#">MEN</a></li>
-            <li><a href="#">OTHER</a></li>
-            <li><a href="#">PURCHASE</a></li>
-          </ul>
-        </nav>
+        <div class="menu-row">
+          <div class="container">
+            <a href="" class="logo clearfix"><img src="images/logo.png" alt="LOGO"></a>
+            <div class="mobile-nav">
+              <nav class="main-nav">
+                <ul class="main-nav-menu">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">WOMEN</a></li>
+                <li><a href="#">MEN</a></li>
+                <li><a href="#">OTHER</a></li>
+                <li><a href="#">PURCHASE</a></li>
+              </ul>
+              </nav>
+              <div class="menu-right">
+						    <form class="search">
+							     <input type="search" name="q" placeholder="Search..." />
+							     <a href="#" id=""><i class="fa fa-search" aria-hidden="true"></i></a>
+						    </form>
 
-        <div class="menu-right">
-						<form class="search">
-						  <input type="search" name="q" placeholder="Search..." />
-						  <a href="#" id=""><i class="fa fa-search" aria-hidden="true"></i></a>
-						</form>
-						 <a href="#" class="btn"><i class="fa fa-tag" aria-hidden="true"></i></a>
-						 <a href="#" class="btn"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span><a href="#" class="menu-right"><b>CART (0)</b></a></span>
-				</div>
+                <ul>
+                  <li><a href="#" class="btn"><i class="fa fa-tag" aria-hidden="true"></i></a></li>
+						      <li><a href="#" class="btn"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                  <li><a href="#">CART (0)</a></li>
+                </ul>
 
-        <!-- <form class="search" action="index.html" method="post">
-          <input type="search" name="" value="Search..">
-          <i class="fa fa-search" aria-hidden="true"></i>
-        </form> -->
+					    </div>
+            </div>
+            <a href="#" class="btn-burger"><i class="fa fa-bars" aria-hidden="true"></i></a>
+          </div>
         </div>
-        <a href="#" class="btn-burger"><i class="fa fa-bars" aria-hidden="true"></i></a>
-      </div>
       </header>
 <!-- slider -->
     <div class="regular slider">
@@ -122,6 +123,7 @@
     <main class="main-body">
       <div class="container">
         <div class="content">
+        <div class="prod-set">
         <h2>FEATURED PRODUCTS</h2>
         <ul class="prod-list">
           <li>
@@ -168,9 +170,60 @@
               </li>
           </ul>
         </div>
+
+
+
+        <div class="prod-set">
+        <h2>STUFF PICK</h2>
+        <ul class="prod-list">
+          <li>
+            <div class="ribbon"><span>NEW</span></div>
+            <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+            <div class="desc">
+             <div class="text">
+              <p>Lorem Ipsum is simply.</p>
+              <span class="price-box"><span>$388.00</span></span>
+             </div>
+             <a href="#" class="btn-cart">Cart button</a>
+            </div>
+           </li>
+           <li>
+             <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+             <div class="desc">
+              <div class="text">
+               <p>Lorem Ipsum is simply.</p>
+               <span class="price-box"><span>$388.00</span></span>
+              </div>
+              <a href="#" class="btn-cart">Cart button</a>
+             </div>
+            </li>
+            <li>
+              <div class="ribbon left green"><span>SALE</span></div>
+              <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+              <div class="desc">
+               <div class="text">
+                <p>Lorem Ipsum is simply.</p>
+                <span class="price-box"><span>$388.00</span></span>
+               </div>
+               <a href="#" class="btn-cart">Cart button</a>
+              </div>
+             </li>
+             <li>
+               <a href="#" class="image"><img src="images/googles.jpg" alt=""></a>
+               <div class="desc">
+                <div class="text">
+                 <p>Lorem Ipsum is simply.</p>
+                 <span class="price-box"><span>$388.00</span></span>
+                </div>
+                <a href="#" class="btn-cart">Cart button</a>
+               </div>
+              </li>
+          </ul>
+        </div>
+      </div>
 <!-- side-bar -->
 <!-- slider-box  -->
-        <div class="side-bar">
+        <div class="side-bar clearfix">
           <div class="regular02 side-slider clearfix">
             <div class="side-slide">
               <img src="images/side-slide01.jpg" alt="">
@@ -229,44 +282,41 @@
     				</div>
 <!-- additional info tab  -->
             <div class="contact-tab">
-    				  <div class="text-block">Information</div>
-    					<div class="alt-content">
-
-                      <!--перестилить линки  -->
-                			<!-- <ul>
-    										<li>Sed ultrices purus non.</li>
-    										<li>sodales sodales.</li>
-    										<li>Curabitur pretium dui vitae.</li>
-    										<li>Donec gravida mi in nisl</li>
-    										<li>faucibus leo condimentum.</li>
-    										<li>Donec et lorem suscipit.</li>
-    									</ul> -->
-    					</div>
-    				</div>
+              <div class="text-block">Information</div>
+              <div class="alt-content">
+                <ul class="footer-info-link">
+                  <li><a href="#">Sed ultrices purus non.</a></li>
+                  <li><a href="#">sodales sodales.</a></li>
+                  <li><a href="#">Curabitur pretium dui vitae.</a></li>
+                  <li><a href="#">Donec gravida mi in nisl</a></li>
+                  <li><a href="#">faucibus leo condimentum.</a></li>
+                  <li><a href="#">Donec et lorem suscipit.</a></li>
+                </ul>
+              </div>
+            </div>
 <!-- contacts / address tab -->
             <div class="contact-tab">
             <div class="text-block">Contact us</div>
-
-            <!-- перестиить полностью  -->
-
-            <!-- <div class="alt-content">
-    					  <span>Leo Store</span><br>
-    					  <span>Leopards media</span><br>
-    					  <span>KVM Rpad, 4590GH</span><br>
-    					  <span>+1 489-8888-0099</span><br>
-    					  <span>mail@email.com</span>
+            <ul class="alt-content">
+            	<li>Leo Store</li>
+            	<li>Leopards media</li>
+            	<li>KVM Rpad, 4590GH</li>
+            	<li>+1 489-8888-0099</li>
+            	<li><a href="mailto:mail@email.com">mail@email.com</a></li>
+            </ul>
+<!-- social links -->
+              <div class="social-btn">
+                <ul class="social-list">
+              	  <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i>G+ button</a></li>
+              		<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn button</a></li>
+              		<li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i>RSS-feed button</a></li>
+              		<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>Facebook button</a></li>
+              	</ul>
               </div>
-
-                  <ul>
-                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-      						  <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-      						  <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-      						  <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                  </ul> -->
             </div>
     			</div>
     		</div>
-
+<!-- End row & copyrights  -->
         <div class="end-row">
     			<div class="container">
     				<div class="end-row-left">
