--- a/index.html
+++ b/index.html
@@ -41,6 +41,29 @@
           <div class="container">
             <a href="" class="logo clearfix"><img src="images/logo.png" alt="LOGO"></a>
             <div class="mobile-nav">
+              <div class="mobile-header">
+              	<form action="#" class="settings">
+              		<label for="language">Language</label>
+              		<select id="language">
+              			<option>English</option>
+              			<option>Ukranian</option>
+              			<option>Japanese</option>
+              		</select>
+              		<label for="Currency">Currency</label>
+              		<select id="Currency">
+              			<option>USD</option>
+              			<option>UAH</option>
+              			<option>JPY</option>
+              		</select>
+              	</form>
+              	<ul class="top-nav">
+              		<li><a href="#">Account</a></li>
+              		<li><a href="#">Wishlist</a></li>
+              		<li><a href="#">Checkout</a></li>
+              		<li><a href="#">Log In</a></li>
+              		<li><a href="#">Sign Up</a></li>
+              	</ul>
+              </div>
               <nav class="main-nav">
                 <ul class="main-nav-menu">
                 <li><a href="#">HOME</a></li>
@@ -51,18 +74,13 @@
               </ul>
               </nav>
               <div class="menu-right">
-						    <form class="search">
-							     <input type="search" name="q" placeholder="Search..." />
-							     <a href="#" id=""><i class="fa fa-search" aria-hidden="true"></i></a>
-						    </form>
-
-                <ul>
-                  <li><a href="#" class="btn"><i class="fa fa-tag" aria-hidden="true"></i></a></li>
-						      <li><a href="#" class="btn"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
-                  <li><a href="#">CART (0)</a></li>
-                </ul>
-
-					    </div>
+  							<form class="search">
+  							<input type="search" name="q" placeholder="Search..." />
+  							<a href="#" id=""><i class="fa fa-search" aria-hidden="true"></i></a>
+  							</form>
+  							<a href="#" class="btn"><i class="fa fa-tag" aria-hidden="true"></i></a>
+  							<a href="#" class="btn"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span><a href="#" class="menu-right"><b>CART (0)</b></a></span>
+  						</div>
             </div>
             <a href="#" class="btn-burger"><i class="fa fa-bars" aria-hidden="true"></i></a>
           </div>
@@ -122,7 +140,7 @@
 <!-- main -->
     <main class="main-body">
       <div class="container">
-        <div class="content">
+        <div class="content clearfix">
         <div class="prod-set">
         <h2>FEATURED PRODUCTS</h2>
         <ul class="prod-list">
@@ -223,7 +241,7 @@
       </div>
 <!-- side-bar -->
 <!-- slider-box  -->
-        <div class="side-bar clearfix">
+        <div class="side-bar ad-box clearfix">
           <div class="regular02 side-slider clearfix">
             <div class="side-slide">
               <img src="images/side-slide01.jpg" alt="">
@@ -236,7 +254,7 @@
             </div>
           </div>
 <!-- newslatter-block -->
-          <div class="newslatter-block">
+          <div class="newslatter-block ad-box">
             <h2>NEWLETTER SIGNUP</h2>
 							<p>Lorem ipsum dolor sit amen, dolor imun ra adlip.</p>
 								<form action="#">
@@ -264,17 +282,17 @@
     			</div>
     		</div>
 <!-- contact-row -->
-        <div class="contact-row">
+        <div class="contact-row clearfix">
     			<div class="container">
 <!-- facebook sample -->
-            <div class="contact-tab">
+            <div class="contact-tab facebook-tab">
     					<div class="text-block">Facebook</div>
     					<div class="alt-content">
     						<a href="#"><img src="images/social-fb-smpl.png" alt=""></a>
     					</div>
     				</div>
 <!-- twetter sample -->
-            <div class="contact-tab">
+            <div class="contact-tab twetter-tab">
     					<div class="text-block">From twitter</div>
     					<div class="alt-content">
     						<a href="#"><img src="images/social-tw-smpl.png" alt=""></a>
