--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <div class="menu-right">
   							<form class="search">
   							<input type="search" name="q" placeholder="Search..." />
-  							<a href="#" id=""><i class="fa fa-search" aria-hidden="true"></i></a>
+  							<a href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
   							</form>
   							<a href="#" class="btn"><i class="fa fa-tag" aria-hidden="true"></i></a>
   							<a href="#" class="btn"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span><a href="#" class="menu-right"><b>CART (0)</b></a></span>
@@ -188,9 +188,6 @@
               </li>
           </ul>
         </div>
-
-
-
         <div class="prod-set">
         <h2>STUFF PICK</h2>
         <ul class="prod-list">
@@ -241,7 +238,7 @@
       </div>
 <!-- side-bar -->
 <!-- slider-box  -->
-        <div class="side-bar ad-box clearfix">
+        <div class="side-bar ad-box">
           <div class="regular02 side-slider clearfix">
             <div class="side-slide">
               <img src="images/side-slide01.jpg" alt="">
