--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       </div>
 <!-- side-bar -->
 <!-- slider-box  -->
-        <div class="side-bar ad-box">
+        <div class="side-bar side-block">
           <div class="regular02 side-slider clearfix">
             <div class="side-slide">
               <img src="images/side-slide01.jpg" alt="">
@@ -251,7 +251,7 @@
             </div>
           </div>
 <!-- newslatter-block -->
-          <div class="newslatter-block ad-box">
+          <div class="newslatter-block side-block">
             <h2>NEWLETTER SIGNUP</h2>
 							<p>Lorem ipsum dolor sit amen, dolor imun ra adlip.</p>
 								<form action="#">
