--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="container">
             <a href="" class="logo clearfix"><img src="images/logo.png" alt="LOGO"></a>
             <div class="mobile-nav">
-              <div class="mobile-header">
+              <div class="mobile-header clearfix">
               	<form action="#" class="settings">
               		<label for="language">Language</label>
               		<select id="language">
@@ -373,8 +373,7 @@
     $('.btn-burger').click(function () {
         $(this).parent().toggleClass('open');
     });
-
-  });
+});
 </script>
 </body>
 </html>
